[tool.poetry]
name = "llm-eco-quest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
litellm = "^1.12.2"
streamlit = "^1.29.0"
openai = "^1.3.8"
async-generator = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
